added relative path for css. Added store token

--- a/src/AddRecipePage.css
+++ b/src/AddRecipePage.css
@@ -16,7 +16,7 @@ header {
     font-family: Arial, sans-serif;
     padding: 20px; /* Padding all around */
     background-color: rgba(244, 244, 244, 0.7); /* Set opacity */
-    background-image: url('C:\Users\eddie\recipesphere-fe-2\Images\pexels-sarah-chai-7262911.jpg'); /* Set your image path */
+    background-image: url('../Images/pexels-sarah-chai-7262911.jpg'); /* Set your image path */
     background-size: cover; /* Cover the entire container */
     background-position: center; /* Center the image */
     background-blend-mode: overlay; /* Blend the image with the background color */
