--- a/src/SignUpLoginPage.css
+++ b/src/SignUpLoginPage.css
@@ -4,7 +4,7 @@
     font-family: Arial, sans-serif;
     padding: 20px;
     background-color: rgba(244, 244, 244, 0.7); /* Set opacity */
-    background-image: url('C:\Users\eddie\recipesphere-fe-2\Images\SignUpLoginPage2.jpg'); /* Set your image path */
+    background-image: url('../Images/SignUpLoginPage2.jpg'); /* Set your image path */
     background-size: cover; /* Cover the entire container */
     background-position: center; /* Center the image */
     background-blend-mode: overlay; /* Blend the image with the background color */
